--- a/垃圾收集算法.md
+++ b/垃圾收集算法.md
@@ -2,4 +2,4 @@
 复制算法。即将新生代内存划分为一块较大的名为Eden和两块较小的名为survivor内存空间，每次使用Eden和其中的一块survivor。当回收的时候，将存活的对象一次性复制到另外一块survivor空间，清理掉Eden和使用过的survivor的对象，当survivor内存不足时，需要老年代的内存空间作为担保。
 
 ## Hotspot虚拟机用何种算法回收老年代的内存？
-标志－整理算法。
+标记－整理算法。即标记需要回收的对象，然后将存活的所有对象都往一端移动，然后直接清理掉端以外的内存。
