--- a/垃圾收集算法.md
+++ b/垃圾收集算法.md
@@ -1,4 +1,4 @@
-## 商业虚拟机用何种算法来回收新生代的内存？
+## Hotspot虚拟机用何种算法来回收新生代的内存？
 复制算法。即将新生代内存划分为一块较大的名为Eden和两块较小的名为survivor内存空间，每次使用Eden和其中的一块survivor。当回收的时候，将存活的对象一次性复制到另外一块survivor空间，清理掉Eden和使用过的survivor的对象，当survivor内存不足时，需要老年代的内存空间作为担保。
 该算法适合存活率低的对象。
 
